# sentiric-stt-gateway-service

./: .context.md  .env.example  .gitignore  Cargo.toml  Dockerfile  LOGIC.md  Makefile  README.md  SETUP.md  SPECIFICATION.md  TASKS.md  TESTING.md  dependency-management.md  docker-compose.dev.gpu.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: main.py
app/core/: config.py  logging.py
src/: app.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs  metrics.rs  tls.rs
src/clients/: whisper.rs
src/grpc/: mod.rs  server.rs  service.rs
tests/: grpc_client.rs
