[package]
name = "sentiric-stt-gateway-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# ... (mevcut bağımlılıklarınız aynı kalacak) ...
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
async-stream = "0.3"
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tonic = "0.11"
prost = "0.12"
config = "0.14"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"

[dependencies.sentiric-contracts]
git = "https://github.com/sentiric/sentiric-contracts.git"
tag = "v1.9.4"

# YENİ BÖLÜM: Sadece testler ve örnekler için gerekli bağımlılıklar
[dev-dependencies]
hound = "3.5"

# Entegrasyon testi için özel bir test binary'si tanımlıyoruz.
[[test]]
name = "grpc_client"
harness = false